--- a/lab_1_training/1.1.SageMaker-Training.ipynb
+++ b/lab_1_training/1.1.SageMaker-Training.ipynb
@@ -363,7 +363,7 @@
     "from sagemaker.xgboost.estimator import XGBoost\n",
     "\n",
     "estimator = XGBoost(\n",
-    "    entry_point=\"xgboost_script_mlflow.py\",\n",
+    "    entry_point=\"xgboost_script.py\",\n",
     "    source_dir='src',\n",
     "    output_path=output_path,\n",
     "    code_location=code_location,\n",
